# gesture-recognizer

./: .env.example  .gitignore  LICENSE.md  README.md  gesture_actions.py  main.py  pyproject.toml
models/: gesture_classifier.keras  gesture_classifier.tflite  labels.txt  scaler_params.json
scripts/: download_dataset.ipynb  download_dataset.py  process_dataset.ipynb  process_dataset.py  test_camera.py  test_mediapipe.py  train_model.ipynb  train_model.py  visualize_dataset.ipynb
src/: __init__.py  actions.py  camera_thread.py  config.py  gesture_handler.py  inference.py  inference_thread.py  main.py  main_window.py  settings_manager.py  test_camera.py
src/actions/: __init__.py  commands.py  handler.py
src/core/: __init__.py  camera.py  classifier.py  detector.py  pipeline.py
src/gui/: __init__.py  main_window.py  overlay.py  tray_icon.py
tests/: test_classifier.py
