[project]
name = "gesture-recognizer"
version = "0.1.0"
description = "Gesture recognizer project for the course DL4CV"
readme = "README.md"
license-files = ["LICENSE.md"]
requires-python = "==3.11.14"
dependencies = [
    "ai-edge-litert==2.1.2",
    "comtypes==1.4.15",
    "customtkinter==5.2.2",
    "dotenv==0.9.9",
    "huggingface-hub==1.4.1",
    "mediapipe==0.10.32",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "pyautogui==0.9.54",
    "pycaw==20251023",
    "pyinstaller==6.19.0",
    "requests==2.32.5",
    "ruff==0.15.2",
    "scikit-learn==1.8.0",
    "screen-brightness-control==0.27.0",
    "tensorflow==2.20.0",
    "tqdm==4.67.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
fixable = ["ALL"]