[project]
name = "gesture-recognizer"
version = "0.2.0"
description = "Gesture recognizer project for the course DL4CV"
readme = "README.md"
license-files = ["LICENSE.md"]
requires-python = "==3.11.14"
dependencies = [
    "ai-edge-litert==2.1.2",
    "mediapipe==0.10.32",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "PySide6>=6.7,<7",
    "platformdirs>=4.0,<5",
    "huggingface-hub==1.4.1",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "tensorflow==2.20.0",
    "tqdm==4.67.3",
    "dotenv==0.9.9",
    "pyautogui>=0.9.54",
]

[dependency-groups]
dev = [
    "ruff==0.15.2",
    "pyinstaller==6.19.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["data*", "models*", "scripts*", "logs*"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
fixable = ["ALL"]
